# rustwx

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  RESULT.md  TODO.md
.github/workflows/: rustwx-ci.yml  workflow.yml
crates/rustwx-calc/: Cargo.toml  README.md
crates/rustwx-calc/src/: derived.rs  ecape.rs  error.rs  lib.rs  severe.rs
crates/rustwx-cli/: Cargo.toml  README.md
crates/rustwx-cli/scripts/: matplotlib_weather_native_bench.py
crates/rustwx-cli/src/: benchmark.rs  cross_section_proof.rs  lib.rs  main.rs  metro.rs  profile.rs  proof_cache.rs  region.rs
crates/rustwx-core/: Cargo.toml  README.md
crates/rustwx-cross-section/: Cargo.toml
crates/rustwx-cross-section/src/: data.rs  error.rs  geo.rs  lib.rs  palette.rs  render.rs  request.rs  style.rs  vertical.rs  wind.rs
crates/rustwx-io/: Cargo.toml  README.md
crates/rustwx-io/src/: cache.rs  lib.rs
crates/rustwx-models/: README.md
crates/rustwx-prep/: Cargo.toml  README.md
crates/rustwx-products/: Cargo.toml  README.md
crates/rustwx-products/src/: artifact_bundle.rs  cache.rs  catalog.rs  comparison.rs  cross_section.rs  custom_poi.rs  dataset_export.rs  derived.rs  direct.rs  ecape.rs  gallery.rs  gridded.rs  heavy.rs  hrrr.rs  intelligence.rs  lib.rs  lightning.rs  named_geometry.rs  non_ecape.rs  orchestrator.rs  places.rs  planner.rs  point_timeseries.rs  publication.rs  publication_provenance.rs  runtime.rs  sampling.rs  severe.rs  shared_context.rs  spec.rs  thermo_native.rs  windowed.rs  windowed_decoder.rs
crates/rustwx-products/tests/: weather_intelligence_backend_contract.rs
crates/rustwx-python/: Cargo.toml  README.md  pyproject.toml
crates/rustwx-python/src/: lib.rs  wrf_render.rs
crates/rustwx-python/src/wrf_render/: api.rs  cross_section.rs  projection.rs  render.rs  spec.rs
crates/rustwx-radar/: Cargo.toml
crates/rustwx-radar/assets/color_tables/: README.md  cc_default.pal  echo_tops_enhanced.pal  reflectivity_nssl_ii.pal  velocity_radarscope_bvel.pal  vil_default.pal
crates/rustwx-radar/src/: ai.rs  aws.rs  cells.rs  dealias.rs  lib.rs  png.rs
crates/rustwx-radar/src/nexrad/: derived.rs  detection.rs  level2.rs  mod.rs  products.rs  sites.rs  srv.rs
crates/rustwx-radar/src/render/: color_table.rs  mod.rs  radar.rs
crates/rustwx-render/: Cargo.toml  README.md
crates/rustwx-render/examples/: demo_basemap.rs  demo_map.rs  demo_panel_presets.rs
crates/rustwx-render/src/: colorbar.rs  colormap.rs  colormaps.rs  contour_fill.rs  draw.rs  error.rs  features.rs  lib.rs  overlay.rs  panel.rs  presentation.rs  projected_map.rs  projection.rs  rasterize.rs  render.rs  request.rs  solar07.rs  text.rs  weather.rs
crates/rustwx-render/verify/: Cargo.toml  README.md
crates/rustwx-render/verify/examples/: synthetic_sbecape.rs
crates/rustwx-render/verify/src/: lib.rs
crates/rustwx-render/verify/tests/: repo_doc_alignment.rs  weather_native_plot_engine.rs
crates/rustwx-sounding/: Cargo.toml  README.md
crates/rustwx-sounding/examples/: demo_sounding.rs  demo_sounding_with_external_ecape.rs
crates/rustwx-sounding/src/: bridge.rs  ecape.rs  error.rs  lib.rs  native_table.rs
crates/rustwx-sounding/tests/: bridge.rs
crates/rustwx-wrf/: Cargo.toml
crates/rustwx-wrf/src/: lib.rs
docs/: ml_dataset_export.md  weather_intelligence_backend.md  wrf_gdex_runbook.md
proof/: README.md  cli_fetch_hrrr_21z_f00_nomads.json  cli_hours_gfs_18z_nomads.json  cli_hours_hrrr_21z_nomads.json  cli_latest_hrrr.json  cli_latest_rrfs_a.json  cli_list.txt  cli_probe_gfs_18z_f00_nomads.json  cli_probe_hrrr_21z_f00_nomads.json  cli_probe_rrfs_a_21z_f00_aws.json  cli_show_rrfs_a.json  cli_url_ecmwf.json  cli_url_gfs.json  cli_url_hrrr.json  cli_url_rrfs_a.json  python_gfs_500mb_benchmark_timing.json  rustwx_ecmwf_open_data_20260414_12z_f000_500mb_temperature_height_winds_timing.json  rustwx_ecmwf_open_data_20260414_12z_f000_conus_500mb_temperature_height_winds_timing.json  rustwx_ecmwf_open_data_20260414_12z_f000_conus_700mb_rh_height_winds_timing.json  rustwx_ecmwf_open_data_20260414_12z_f000_midwest_500mb_temperature_height_winds_timing.json  rustwx_gfs_20260414_18z_f000_500mb_temperature_height_winds_timing.json  rustwx_gfs_20260414_18z_f000_conus_500mb_temperature_height_winds_timing.json  rustwx_gfs_20260414_18z_f000_conus_500mb_vorticity_height_winds_timing.json  rustwx_gfs_20260414_18z_f000_conus_700mb_rh_height_winds_timing.json  rustwx_gfs_20260414_18z_f000_conus_mslp_10m_winds_timing.json  rustwx_gfs_20260414_18z_f000_midwest_500mb_temperature_height_winds_timing.json  rustwx_hrrr_20260414_22z_f00_ecape8_timing.json  rustwx_hrrr_20260414_23z_f000_500mb_temperature_height_winds_timing.json  rustwx_hrrr_20260414_23z_f000_amarillo_chicago_rh_cross_section.json  rustwx_hrrr_20260414_23z_f000_amarillo_chicago_temperature_cross_section.json  rustwx_hrrr_20260414_23z_f000_amarillo_chicago_theta_e_cross_section.json  rustwx_hrrr_20260414_23z_f000_amarillo_chicago_wind_speed_cross_section.json  rustwx_hrrr_20260414_23z_f000_conus_500mb_temperature_height_winds_timing.json  rustwx_hrrr_20260414_23z_f000_conus_700mb_dewpoint_height_winds_timing.json  rustwx_hrrr_20260414_23z_f000_conus_composite_reflectivity_timing.json  rustwx_hrrr_20260414_23z_f000_midwest_composite_reflectivity_uh_timing.json  rustwx_hrrr_20260414_23z_f000_southeast_500mb_temperature_height_winds_timing.json  rustwx_hrrr_20260414_23z_f000_southeast_700mb_dewpoint_height_winds_timing.json  rustwx_hrrr_20260414_23z_f000_southern_plains_native_proof_cross_section_hook.json  rustwx_hrrr_20260414_23z_f000_southern_plains_native_proof_summary.json  (+10 more)
proof/concurrent_3hours_all_models_direct_profile_20260419/: concurrent_3hours_profile_summary.json
proof/conus/: rustwx_hrrr_20260414_23z_f000_conus_non_ecape_hour_run_manifest.38499809c30eb830.json  rustwx_hrrr_20260414_23z_f000_conus_non_ecape_hour_run_manifest.6be53f4f7e1bea8f.json  rustwx_hrrr_20260414_23z_f000_conus_non_ecape_hour_run_manifest.8edf91e4b0facc2b.json
scripts/: alias_wrf_gdex_cache_entry.py  seed_wrf_gdex_cache.py  summarize_ecape_grid_research.py
(+9 files in other folders)
