[package]
name = "rustwx-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
default-run = "rustwx-cli"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
grib-core = { path = "../../vendor/grib-core" }
rustwx-calc = { path = "../rustwx-calc" }
rustwx-core = { path = "../rustwx-core" }
rustwx-cross-section = { path = "../rustwx-cross-section" }
rustwx-io = { path = "../rustwx-io" }
rustwx-models = { path = "../rustwx-models" }
rustwx-products = { path = "../rustwx-products" }
rustwx-render = { path = "../rustwx-render" }
