[package]
name = "rustwx-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
default-run = "rustwx-cli"

[features]
default = []
wrf = ["rustwx-io/wrf", "rustwx-products/wrf"]

[dependencies]
anyhow = "1"
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono = { version = "0.4", default-features = false, features = ["std"] }
ecape-rs = { path = "../../vendor/ecape-rs" }
flate2 = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
grib-core = { path = "../../vendor/grib-core" }
rustwx-calc = { path = "../rustwx-calc" }
rustwx-core = { path = "../rustwx-core" }
rustwx-cross-section = { path = "../rustwx-cross-section" }
rustwx-io = { path = "../rustwx-io" }
rustwx-models = { path = "../rustwx-models" }
rustwx-products = { path = "../rustwx-products" }
rustwx-radar = { path = "../rustwx-radar" }
rustwx-render = { path = "../rustwx-render" }
rustwx-sounding = { path = "../rustwx-sounding" }
