[package]
name = "rustwx-io"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
bincode = "1.3"
grib-core = { path = "../../../cfrust/crates/grib-core" }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rustwx-core = { path = "../rustwx-core" }
rustwx-models = { path = "../rustwx-models" }
wx-core = { path = "../../../metrust-py/crates/wx-core" }

[dev-dependencies]
chrono = { version = "0.4", default-features = false }
