[package]
name = "rustwx-products"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
bincode = "1.3"
image = { version = "0.25", default-features = false, features = ["png"] }
serde.workspace = true
serde_json.workspace = true
rustwx-calc = { path = "../rustwx-calc" }
rustwx-core = { path = "../rustwx-core" }
rustwx-io = { path = "../rustwx-io" }
rustwx-models = { path = "../rustwx-models" }
rustwx-render = { path = "../rustwx-render" }
grib-core = { path = "../../vendor/grib-core" }
