[package]
name = "rustwx-python"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
rustwx-core = { path = "../rustwx-core" }
rustwx-io = { path = "../rustwx-io" }
rustwx-models = { path = "../rustwx-models" }
serde_json.workspace = true
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
