[package]
name = "rustwx-python"
version = "0.4.2"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3", "dep:numpy"]

[dependencies]
rustwx-core = { path = "../rustwx-core" }
rustwx-io = { path = "../rustwx-io" }
rustwx-models = { path = "../rustwx-models" }
rustwx-products = { path = "../rustwx-products" }
rustwx-render = { path = "../rustwx-render" }
rustwx-sounding = { path = "../rustwx-sounding" }
image = { version = "0.25", default-features = false, features = ["png"] }
serde.workspace = true
serde_json.workspace = true
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
numpy = { version = "0.23", optional = true }
