[package]
name = "rustwx-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
serde.workspace = true
thiserror.workspace = true
rustwx-core = { path = "../rustwx-core" }
wrf-render = { path = "../../../wrf-rust-plots/crates/wrf-render" }
