[package]
name = "rustwx-sounding"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
serde.workspace = true
thiserror.workspace = true
sharprs = { path = "../../../sharprs" }
