[package]
name = "rustwx-wrf"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
netcrust = { path = "../../vendor/netcrust" }
rayon.workspace = true
rustwx-core = { path = "../rustwx-core" }
thiserror.workspace = true
