[package]
name = "rustwx-render-verify"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
wrf-render = { path = "../../../../wrf-rust-plots/crates/wrf-render" }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
